# community-flow

./: LICENSE  README.md  setup.cfg
src/communityflow/: __init__.py  colorgrid.py  communityflow.py  graph.py  sequence.py  timer.py
src/communityflow/community/: detection.py  leiden.py  louvain.py
src/communityflow/data/: grouping.py  partition.py
src/communityflow/graph/: compare.py  creation.py  descriptor.py  faster.py  graph.py  nodemap.py
