[metadata]
name = communityflow
version = 0.0.0
license = MIT
description = Temporal Network Community Flow
long_description = file: README.rst
author = Michael Uftring
author_email = michael.uftring@gmail.com
url = https://github.com/muftring/community-flow
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src
